# Selfy-AI

./: .gitignore
backend/: .env.example  README.md  gmailAuth.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9f1b0a7c2d34_add_onboarding_timestamp_defaults.py  e3d8dec98298_initial_schema.py
backend/app/: main.py
backend/app/agent/tools/: __init__.py  github.py  registry.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  database.py  init_db.py  session.py
backend/app/dependencies/: auth.py
backend/app/integrations/github/: __init__.py  client.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  onboarding.py  project.py  user.py
backend/app/repositories/: __init__.py  onboarding.py  user.py
backend/app/routers/: auth.py  health.py  llm.py  onboarding.py  router.py
backend/app/routers/connectionsAuth/: gmail.py
backend/app/schemas/: auth.py  llm.py  onboarding.py
backend/app/services/: __init__.py  auth.py  llm.py  onboarding.py
backend/app/subagents/: gmailAgent.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20260413113000_init.sql  20260413131500_add_user_onboarding_profiles.sql  20260511175615_fix_onboarding_top_values_count.sql  20260512193443_create_user_onboarding_profiles.sql
backend/tests/: test_github_tools.py  test_health.py  test_llm.py  test_onboarding.py
