[project]
name = "backend"
version = "0.1.0"
description = "Backend service for a Pika-style AI video generation app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
backend = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
